<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * Copyright 2016 - 2019 Javier Refuerzo. Swansea Software LLC. Denver, CO. USA.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
-->
<!-- Options menu for the CatalogActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">



    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never" />

    <!-- "app:showAsAction" places item on the bar apposed to in the menu -->
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:icon="@drawable/baseline_help_outline_white_24"
        app:showAsAction="always" />



    <!-- "app:showAsAction" places item on the bar apposed to in the menu -->
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/baseline_check_white_36"
        app:showAsAction="always" />


</menu>