<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hubs_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/main_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <!--Start of the Hub Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/description_index_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/hub_name" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edittext_hub_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hub_name"
                    android:inputType="textCapSentences" />

            </RelativeLayout>
        </LinearLayout>



        <!-- Start of the Local Network Settings -->
        <LinearLayout
            android:id="@+id/linear_layout_local_network_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/local_connection_settings"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boarder"
                android:orientation="vertical">

                <!--Start of the Local Ip Address -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/texview_local_ip_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/hub_local_ip_address" />

                        <ImageView
                            android:id="@+id/find_hub_circle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:paddingRight="8dp"
                            android:scaleType="fitEnd"

                            android:src="@drawable/baseline_search_black_24" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edittext_local_ip_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="http://192.168.XXX.XXX" />

                    </RelativeLayout>
                </LinearLayout>


                <!--Start of the Local User Name -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/texview_local_username"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/hub_local_username" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edittext_local_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hub_local_username" />

                    </RelativeLayout>
                </LinearLayout>

                <!--Start of the Local Password -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/texview_local_password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:text="@string/hub_local_password" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edittext_local_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hub_local_password"
                            android:inputType="textPassword" />

                    </RelativeLayout>
                </LinearLayout>





                <!-- Start of Test Local Network-->
                <LinearLayout
                    android:id="@+id/test_local_network_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/test_local_network_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_test_hub_on_local_network" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</ScrollView>